Import of BEROV/Ado-Plugin-Vest-0.04-TRIAL from CPAN.
gitpan-cpan-distribution: Ado-Plugin-Vest
gitpan-cpan-version:      0.04-TRIAL
gitpan-cpan-path:         BEROV/Ado-Plugin-Vest-0.04-TRIAL.tar.gz
gitpan-cpan-author:       BEROV
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Ado-Plugin-Vest
 
+0.04 2014-10-21
+    - Fixed Tests.
+
 0.03 2014-10-21
     - A working draft. Two users can chat.
     - Added lots of tests for REST API.
