Import of BEROV/Ado-Plugin-Vest-0.07 from CPAN.
gitpan-cpan-distribution: Ado-Plugin-Vest
gitpan-cpan-version:      0.07
gitpan-cpan-path:         BEROV/Ado-Plugin-Vest-0.07.tar.gz
gitpan-cpan-author:       BEROV
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -13,15 +13,43 @@ DESCRIPTION
     accepts proposals enlightenment and inspiration.
 
 SYNOPSIS
-      # 1. To enable this plugin after installation, add it to etc/ado.conf
-      #"plugins" section *after* DSC plugin.
-      plugins => [
-        #...
-        'vest',
-        #...
-     ],
-     # 2. Restart Ado
-     # 3. Login and go to http://yourdomain/vest
+    1. To enable this plugin after installation, add it to etc/ado.conf
+          #"plugins" section *after* DSC plugin.
+          plugins => [
+            #...
+            'vest',
+            #...
+         ],
+
+    2. Restart Ado
+    3. Add users to the group 'vest' so they can use the application. See
+    examples below. See also Ado::Command::adduser.
+            # Add to group 'vest':
+            berov@u165:~/opt/public_dev/Ado$ bin/ado adduser -u berov -g vest
+
+            #Create a user and add it to group 'vest'
+            berov@u165:~/opt/public_dev/Ado$ bin/ado adduser -u berov \
+              -g vest -f Krasimir -l Berov -e berov@cpan.org -d 0 -p pa55w0r4
+            User 'berov' was created with primary group 'berov'.
+            User 'berov' was added to group 'vest'.
+
+    4. Search for other users and add them as contacts. User interface is
+    not yet implemented. You can add contacts for a user using the
+    comandline:
+            #add berov to test1's contacts
+            berov@u165:~/opt/public_dev/Ado$ bin/ado adduser -u berov \
+              -g vest_contacts_for_test1
+            'berov' is already taken!
+            User 'berov' was added to group 'vest_contacts_for_test1'.
+
+            #add test1 to berov's contacts
+            berov@u165:~/opt/public_dev/Ado$ bin/ado adduser -u test1 -g vest_contacts_for_berov
+            'test1' is already taken!
+            User 'test1' was added to group 'vest_contacts_for_berov'.
+
+    5. Login as one of the added users: http://yourdomain/login
+    6. Go to http://yourdomain/vest
+    7. Have some chat...
 
 ATTRIBUTES
     Ado::Plugin::Vest inherits all atributes from Ado::Plugin.
