--- a/Changes
+++ b/Changes
@@ -1,4 +1,15 @@
 Revision history for Ado-Plugin-Vest
+0.09 2014-12-19
+    - Improved distribution Kwalitee by adding Perl 5.14 as prerequisite.
+    - Mention Ado explicitly and link to it in the documentation.
+    - Added "wellcome" message for all new users in after_user_add hook.
+      See Ado::Plugin::Vest/after_user_add
+    - Upgraded to Ado 0.76
+    - Added links to the menu under user name.
+    - Implemented search for contacts by name and email.
+    - Implemented adding of contacts.
+    - Fixed failing tests and improved test-coverage significantly.
+
 0.08 2014-11-17
     - Upgraded to Ado 0.73
     - Upgraded to Mojolicious::Plugin::SemanticUI 0.08.
